[gd_scene load_steps=20 format=2]

[ext_resource path="res://GOL_controller/GlowCheckButton.gd" type="Script" id=1]
[ext_resource path="res://GOL_controller/CheckButtonSimulation.gd" type="Script" id=2]
[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=3]
[ext_resource path="res://GOL_controller/ButtonRandom.gd" type="Script" id=4]
[ext_resource path="res://GOL_controller/GridCheckButtonSimulation.gd" type="Script" id=5]
[ext_resource path="res://GOL_controller/HSliderSpeed.gd" type="Script" id=6]
[ext_resource path="res://main/HUD.gd" type="Script" id=7]
[ext_resource path="res://GOL_controller/LoadBitmapButton.gd" type="Script" id=8]
[ext_resource path="res://GOL_controller/PenTypeOptionButton.gd" type="Script" id=9]
[ext_resource path="res://GOL_controller/ZoneRulesMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://GOL_controller/ButtonClear.gd" type="Script" id=11]
[ext_resource path="res://GOL_controller/ButtonStep.gd" type="Script" id=12]
[ext_resource path="res://themes/DarkTheme/Dark.theme" type="Theme" id=13]
[ext_resource path="res://GOL_controller/FillSlider.gd" type="Script" id=14]
[ext_resource path="res://GOL_controller/PenSizeHSlider.gd" type="Script" id=15]
[ext_resource path="res://GOL_controller/PenOpacityHSlider.gd" type="Script" id=16]
[ext_resource path="res://GOL_controller/InfectedColorPickerButton.gd" type="Script" id=17]
[ext_resource path="res://GOL_controller/InfectedSpreadHSlider.gd" type="Script" id=18]
[ext_resource path="res://GOL_controller/BitmapFileDialog.gd" type="Script" id=19]

[node name="GOLController" type="Control"]
anchor_bottom = 1.0
margin_right = 400.0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 380.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="PauseHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 40.0
hint_tooltip = "Run the simulation [P]"

[node name="LabelPaused" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = 13.0
margin_right = 68.0
margin_bottom = 27.0
text = "Simulation"

[node name="CheckButtonSimulation" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 72.0
margin_right = 148.0
margin_bottom = 40.0
pressed = true
script = ExtResource( 2 )

[node name="GridHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 380.0
margin_bottom = 85.0
hint_tooltip = "Toggle grid [G]"

[node name="GridLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GridHBoxContainer"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 27.0
text = "Grid"

[node name="GridCheckButton" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/GridHBoxContainer"]
margin_left = 31.0
margin_right = 107.0
margin_bottom = 40.0
pressed = true
script = ExtResource( 5 )

[node name="GlowHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 380.0
margin_bottom = 130.0
hint_tooltip = "Toggle glow [W]"

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GlowHBoxContainer"]
margin_top = 13.0
margin_right = 32.0
margin_bottom = 27.0
text = "Glow"

[node name="GlowCheckButton" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/GlowHBoxContainer"]
margin_left = 36.0
margin_right = 112.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="SpeedHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 380.0
margin_bottom = 151.0
hint_tooltip = "Simulation steps per second"

[node name="LabelSpeed" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer"]
margin_top = 1.0
margin_right = 39.0
margin_bottom = 15.0
text = "Speed"

[node name="HSliderSpeed" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer"]
margin_left = 43.0
margin_right = 380.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 120.0
value = 60.0
ticks_on_borders = true
script = ExtResource( 6 )

[node name="SliderLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="ButtonStep" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 380.0
margin_bottom = 176.0
hint_tooltip = "Simulation step [S]"
text = "Step"
script = ExtResource( 12 )

[node name="FillHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 380.0
margin_bottom = 201.0

[node name="FillButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_right = 188.0
margin_bottom = 20.0
hint_tooltip = "Make a portion of cells alive [F]"
size_flags_horizontal = 3
text = "Fill"
script = ExtResource( 4 )

[node name="FillSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5
exp_edit = true
script = ExtResource( 14 )

[node name="SliderLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="ButtonClear" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 380.0
margin_bottom = 226.0
hint_tooltip = "Make all cells dead [C]"
text = "Clear"
script = ExtResource( 11 )

[node name="LoadBitmapButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 380.0
margin_bottom = 251.0
hint_tooltip = "Doesn't work in the browser"
text = "Load bitmap..."
script = ExtResource( 8 )

[node name="BitmapFileDialog" type="FileDialog" parent="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton"]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
script = ExtResource( 19 )

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 380.0
margin_bottom = 260.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 380.0
margin_bottom = 279.0
text = "Pen settings"
align = 1

[node name="GridBoxContainer" type="GridContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 380.0
margin_bottom = 320.0
columns = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
text = "Size"

[node name="PenSizeHSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_left = 53.0
margin_right = 380.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
script = ExtResource( 15 )

[node name="SliderLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme = ExtResource( 13 )
theme_type_variation = "SliderLabel"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="Label2" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_top = 21.0
margin_right = 49.0
margin_bottom = 35.0
text = "Opacity"

[node name="PenOpacityHSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_left = 53.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1
script = ExtResource( 16 )

[node name="SliderLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="PenTypeOptionButton" type="OptionButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 380.0
margin_bottom = 345.0
hint_tooltip = "Select what type of cells to draw:
Alive [A]
Dead [D]
Infected [I]"
text = "Alive"
items = [ "Alive", null, false, 1, null, "Dead", null, false, 0, null, "Infected", null, false, 2, null ]
selected = 0
script = ExtResource( 9 )

[node name="HSeparator2" type="HSeparator" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 380.0
margin_bottom = 354.0

[node name="ZonesRulesTabContainer" type="TabContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 359.0
margin_right = 380.0
margin_bottom = 495.0
hint_tooltip = "Modify properties of zones and types of cells"

[node name="Zone 1" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 10 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Zone 2" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
zone = 1

[node name="Infection" type="PanelContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer"]
visible = false
margin_right = 4.0
margin_bottom = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 25.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer"]
margin_right = 6.4
margin_bottom = 25.4
hint_tooltip = "Color of living infected cells"
mouse_filter = 1
text = "Color"

[node name="InfectedColorPickerButton" type="ColorPickerButton" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 23.0
size_flags_horizontal = 3
script = ExtResource( 17 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2"]
margin_right = 6.4
margin_bottom = 25.4
text = "Infectivity"

[node name="InfectedSpreadHSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2"]
margin_right = 40.0
margin_bottom = 13.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5
script = ExtResource( 18 )

[node name="SliderLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2/InfectedSpreadHSlider"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/GridHBoxContainer/GridCheckButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/GlowHBoxContainer/GlowCheckButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ButtonStep" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ButtonClear" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/PenTypeOptionButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 1" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 2" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer/InfectedColorPickerButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2/InfectedSpreadHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" to="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" method="_on_CheckButtonSimulation_toggled"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/GridHBoxContainer/GridCheckButton" to="Panel/ScrollContainer/VBoxContainer/GridHBoxContainer/GridCheckButton" method="_on_GridCheckButton_toggled"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/GlowHBoxContainer/GlowCheckButton" to="Panel/ScrollContainer/VBoxContainer/GlowHBoxContainer/GlowCheckButton" method="_on_GlowCheckButton_toggled"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed" to="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed" method="_on_HSliderSpeed_value_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/ButtonStep" to="Panel/ScrollContainer/VBoxContainer/ButtonStep" method="_on_ButtonStep_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" to="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" method="_on_FillButton_pressed"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" to="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" method="_on_FillSlider_value_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/ButtonClear" to="Panel/ScrollContainer/VBoxContainer/ButtonClear" method="_on_ButtonClear_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton" to="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton/BitmapFileDialog" method="_on_LoadBitmapButton_pressed"]
[connection signal="file_selected" from="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton/BitmapFileDialog" to="Panel/ScrollContainer/VBoxContainer/LoadBitmapButton" method="_on_BitmapFileDialog_file_selected"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" to="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" method="_on_PenSizeHSlider_value_changed"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" to="Panel/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" method="_on_PenOpacityHSlider_value_changed"]
[connection signal="item_selected" from="Panel/ScrollContainer/VBoxContainer/PenTypeOptionButton" to="Panel/ScrollContainer/VBoxContainer/PenTypeOptionButton" method="_on_PenTypeOptionButton_item_selected"]
[connection signal="color_changed" from="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer/InfectedColorPickerButton" to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer/InfectedColorPickerButton" method="_on_InfectedColorPickerButton_color_changed"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2/InfectedSpreadHSlider" to="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/HBoxContainer2/InfectedSpreadHSlider" method="_on_InfectedSpreadHSlider_value_changed"]
